[package]
name = "tv-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }

bevy                = "0.18.1"
bevy_egui           = "0.39.1"
bevy-inspector-egui = "0.36.0"

[features]
# disable for release build
default = ["debug"]
debug = ["bevy/dynamic_linking", "bevy/hotpatching"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
